--- a/Views/TransportUsages/Create.cshtml
+++ b/Views/TransportUsages/Create.cshtml
@@ -13,10 +13,23 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Transport_type" class="control-label">Vervoersmiddel</label>
+                <select class="form-control" id="Transport_type" name="Transport_type">
+                    <option>Selecteer vervoersmiddel</option>
+                    <option>Trein</option>
+                    <option>Auto</option>
+                    <option>Fiets</option>
+                    <option>Boot</option>
+                    <option>Vliegtuig</option>
+                    <option>Anders....</option>
+                </select>
+                <span asp-validation-for="Transport_type" class="text-danger"></span>
+            </div>
+@*            <div class="form-group">
                 <label asp-for="Transport_type" class="control-label"></label>
                 <input asp-for="Transport_type" class="form-control" />
                 <span asp-validation-for="Transport_type" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="Distance" class="control-label"></label>
                 <input asp-for="Distance" class="form-control" />
@@ -41,6 +54,12 @@
         </form>
     </div>
 </div>
+
+<select class="form-control" id="StudentGender" name="StudentGender">
+    <option>Select Gender</option>
+    <option>Male</option>
+    <option>Female</option>
+</select>
 
 <div>
     <a asp-action="Index">Back to List</a>
