--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -395,35 +395,8 @@ media (prefers-reduced-motion: reduce) {
             <li id="carousel__slide1" tabindex="0" class="carousel__slide">
                 <div class="carousel__snapper">
                     <div id="roundcart" class="card text-black bg-white mb-3" style="width: 81rem; height: 39.4rem;">
-                        <div class="card-body">
+                    <img src="https://cdn.discordapp.com/attachments/1151428021341925472/1172155934529822811/image.png?ex=655f4a48&is=654cd548&hm=6b9da6c5560cd5d2d5bf5cbe3fbc2681aef3367ecaa59f3288fcd0fc95633125&" style="align-content:center" height="550" width="900"/>
 
-
-    <div class="card">
-        <h2>Week 42</h2>
-        <section>
-            <h3>Uitstoot van vervoer</h3>
-            <p>Gerend afstand: 100 km</p>
-            <p>Totale uitstoot van vervoer: 5 kg CO2</p>
-        </section>
-        <section>
-            <h3>Uitstoot van voedsel</h3>
-            <p>Hoeveelheid voedsel: 10 kg</p>
-            <p>Totale uitstoot van voedsel: 2 kg CO2</p>
-        </section>
-        <section>
-            <h3>Uitstoot van restafval</h3>
-            <p>Hoeveelheid afval: 5 kg</p>
-            <p>Totale uitstoot van restafval: 1 kg CO2</p>
-        </section>
-        <section>
-            <h3>Totale uitstoot</h3>
-            <p>Totale uitstoot: 8 kg CO2</p>
-        </section>
-        <section>
-            <h3>Verschil in uitstoot t.o.v. de vorige week</h3>
-            <p>Totale uitstoot: 2 kg CO2</p>
-        </section>
-                    </div>
                     </div>
                     <a href="#carousel__slide4" class="carousel__prev">Go to last slide</a>
                     <a href="#carousel__slide2" class="carousel__next">Go to next slide</a>
