--- a/Views/TransportUsages/Delete.cshtml
+++ b/Views/TransportUsages/Delete.cshtml
@@ -4,13 +4,19 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Vervoers gebruik verwijderen</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Weet je zeker dat je dit wilt verwijderen?</h3>
 <div>
-    <h4>TransportUsage</h4>
     <hr />
-    <dl class="row">
+<h4>
+    
+        <p>Vervoersmiddel: @Html.DisplayFor(model => model.Transport_type)</p>
+        <p>Afstand: @Html.DisplayFor(model => model.Distance) KM</p>
+        <p>Uitstoot: @Html.DisplayFor(model => model.Emmission_KM) CO2 per KM</p>
+        <p>Week nummer: @Html.DisplayFor(model => model.Weekly_reportId)</p>
+
+    @*<dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Distance)
         </dt>
@@ -35,11 +41,11 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Weekly_report.Id)
         </dd>
-    </dl>
-    
+    </dl>*@
+    </h4>
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Verwijder" class="btn btn-success" />
+        <button type="button" class="btn btn-danger" onclick="window.location.href='../index'">Anuleer</button>
     </form>
 </div>
